<resources>
    <string name="app_name">Android2Lesson8_SMS</string>
    <string name="action_settings">Settings</string>
    <string name="waiting_text">Waiting text</string>
    <string name="send_message">Send message</string>
    <string name="number_autoHints">+7</string>
    <string name="textview_for_receive_massage">TextView for receive massage</string>
    <string name="tel_number">Tel. number for send</string>
    <string name="message_for_send">Message for send</string>
</resources>
