<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tel_number"/>

    <EditText
        android:id="@+id/send_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:inputType="phone" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_for_send"/>
    <EditText
        android:id="@+id/send_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_of_text"
        android:inputType="text"
        android:background="@android:color/darker_gray"/>
    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/send_message"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_for_receive_massage"/>
    <TextView
        android:id="@+id/receive_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_of_text"
        android:text="@string/waiting_text"
        android:textSize="@dimen/front_size"
        android:background="@android:color/darker_gray"/>
</LinearLayout>